--- a/HTTP5101_School_System/Content/style.css
+++ b/HTTP5101_School_System/Content/style.css
@@ -1,14 +1,17 @@
 ﻿
 /*GENERAL CSS*/
 .cwidth{max-width:1080px; margin:0 auto;}
-header,footer{background:#b2b2b2;}
+header,footer{background:#dedede;}
 header{margin-bottom:50px;}
 footer{margin-top:50px;}
 
 
 /*CSS FOR TABLE-LIKE STYLING*/
+
+/*STUDENTS*/
+
 #students_result {width:100%;}
-.listitem {background:#fefefe; padding: 12px 5%; width:90%; overflow:hidden;}
+.listitem {background:#ff0000; padding: 12px 5%; width:90%; overflow:hidden;}
 
 .listitem:after{clear:both;}
 .listitem:nth-child(2n){background:#dedede;}
@@ -18,6 +21,33 @@ footer{margin-top:50px;}
     columns : 4
     gutter/column ratio : 0.2
 */
-.col4, .col4last{float:left; width:21.73%; margin-right:4.34%;}
+.col4, .col4last {
+    
+    float: left;
+    width: 21.73%;
+    margin-right: 4.34%;
+}
 .col4last{margin-right:0%;}
+
+/*TEACHERS*/
+
+#teachers_result {
+    width: 100%;
+}
+/*
+Each column should be 17.48% wide with a gutter space of 3.14%
+*/
+
+.col5 {
+    float: left;
+    width: 17.48%;    
+    margin-right: 3.14%;
+}
+
+.col5last {
+    float: left;
+    width: 17.48%;    
+    margin-right: 0;
+}
+/*http://sandbox.bittsdevelopment.com/colcalc/*/
 
