--- a/HTTP5101_School_System/Content/styleNew.css
+++ b/HTTP5101_School_System/Content/styleNew.css
@@ -3,8 +3,8 @@
     .cwidth
 
 {
-    max-width: 1080px;
-    margin: 0 auto;
+    margin: 0 0px 0 0px;
+    display: flex;
 }
 
 header, footer {
@@ -17,6 +17,55 @@ header {
 
 footer {
     margin-top: 50px;
+}
+
+.logo {
+    height: 130px;
+    width: 130px;
+    padding-left: 60px;
+    padding-top: 10px;
+    flex-direction: row;
+}
+
+#school-name {
+    font-size: 3em;
+    margin: 40px 0 0 20px;
+    flex-direction: row;
+}
+#main-navigation {
+    display: flex;
+    align-items:center;
+    flex-direction: row;
+  }
+    #main-navigation ul {
+        align-items: center;
+        margin: 0;
+        padding: 1em 0;
+        font-size: 1em;
+    }
+  #main-navigation li {
+
+    display:inline-block;
+    list-style-type:none;
+    height: 70px;
+    margin-right:1.5em;
+    border:solid;
+    border-width: 0 3px 0 0;
+    padding: 0 20px 0 0;
+
+  }
+  #main-navigation li:first-child {
+    margin-left:1.5em;
+  }
+    #main-navigation a {
+        text-decoration: none;
+        color: black;
+    }
+#main-navigation a:hover {
+    color: blue;
+} 
+.hidden {
+    display: none;
 }
 
 
