Master pages change

--- a/HTTP5101_School_System/Content/styleNew.css
+++ b/HTTP5101_School_System/Content/styleNew.css
@@ -6,6 +6,10 @@
     margin: 0 0px 0 0px;
     display: flex;
 }
+.body-width {
+    max-width: 1080px;
+    margin: 0 auto;
+}
 
 header, footer {
     background: #dedede;
@@ -17,6 +21,14 @@ header {
 
 footer {
     margin-top: 50px;
+}
+
+.button{
+    margin: 10px 10px 10px 10px;
+}
+
+.edit-buttons{
+    float: right;
 }
 
 .logo {
@@ -63,7 +75,41 @@ footer {
     }
 #main-navigation a:hover {
     color: blue;
+}
+
+#foot-navigation {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin: 0 0 0 60px;
+}
+
+#foot-navigation ul {
+    align-items: center;
+    margin: 0;
+    padding: 1em 0;
+    font-size: 1em;
+}
+
+#foot-navigation li {
+    display: inline-block;
+    list-style-type: none;
+    height: 70px;
+    margin-right: 1.5em;
+    border: solid;
+    border-width: 0 3px 0 0;
+    padding: 0 20px 0 0;
+}
+
+#foot-navigation a {
+    text-decoration: none;
+    color: black;
+}
+
+#foot-navigation a:hover {
+    color: blue;
 } 
+
 .hidden {
     display: none;
 }
@@ -73,42 +119,30 @@ footer {
 
 /*STUDENTS*/
 
-#students_result {
-    width: 100%;
-}
 
+#students_result {width:auto;}
 .listitem {
-    background: #ffffff;
+    background: #dedede;
     padding: 12px 5%;
     width: 90%;
     overflow: hidden;
 }
 
-    .listitem:after {
-        clear: both;
-    }
-
-    .listitem:nth-child(2n) {
-        background: #dedede;
-    }
-
-    .listitem:hover {
-        background: #e9d898;
-    }
+.listitem:after{clear:both;}
+.listitem:nth-child(2n){background: white;}
+.listitem:hover {background: #e9d898;}
 /*
     sandbox.bittsdevelopment.com/colcalc
     columns : 4
     gutter/column ratio : 0.2
 */
 .col4, .col4last {
+    
     float: left;
     width: 21.73%;
     margin-right: 4.34%;
 }
-
-.col4last {
-    margin-right: 0%;
-}
+.col4last{margin-right:0%;}
 
 /*TEACHERS*/
 
@@ -121,13 +155,13 @@ Each column should be 17.48% wide with a gutter space of 3.14%
 
 .col5 {
     float: left;
-    width: 17.48%;
+    width: 17.48%;    
     margin-right: 3.14%;
 }
 
 .col5last {
     float: left;
-    width: 17.48%;
+    width: 17.48%;    
     margin-right: 0;
 }
 /*http://sandbox.bittsdevelopment.com/colcalc/*/
