--- a/HTTP5101_School_System/Content/style.css
+++ b/HTTP5101_School_System/Content/style.css
@@ -49,5 +49,9 @@ Each column should be 17.48% wide with a gutter space of 3.14%
     width: 17.48%;    
     margin-right: 0;
 }
+
+.button {
+
+}
 /*http://sandbox.bittsdevelopment.com/colcalc/*/
 
