--- a/HTTP5101_School_System/Layout.Master
+++ b/HTTP5101_School_System/Layout.Master
@@ -49,6 +49,7 @@
 	        </ul>
 	    </nav>
         </div>
+        <div>Web Site is for Educational Purposes Only</div>
     </footer>
 </body>
 </html>
